--- a/web/app/themes/sage/composer.json
+++ b/web/app/themes/sage/composer.json
@@ -32,15 +32,16 @@
     }
   },
   "repositories": [
-    { "type": "vcs", "url": "https://github.com/strarsis/sage-installer" }
+    { "type": "vcs", "url": "https://github.com/jeh5256/sage-installer"},
+    { "type":"vcs", "url":"https://github.com/jeh5256/sage-lib" }
   ],
   "require": {
     "php": ">=7.1",
-    "composer/installers": "~1.9",
-    "illuminate/support": "5.6.*",
-    "roots/sage-lib": "~9.0.9",
+    "composer/installers": "~2.0",
+    "illuminate/support": "^8.0",
+    "roots/sage-lib": "dev-master",
     "soberwp/controller": "~2.1.0",
-    "roots/sage-installer": "dev-webpack5#f4a07cb"
+    "roots/sage-installer": "dev-master"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.8.0",
